--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "grunt-contrib-qunit": "^0.5.2",
     "grunt-contrib-sass": "^0.8.1",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-eslint": "^2.0.0",
     "time-grunt": "^1.0.0"
   }
 }
