--- a/lift.routing.yml
+++ b/lift.routing.yml
@@ -1,9 +1,11 @@
 lift.view_entity_by_id:
-  path: '/lift/{entity_type}/{entity}'
+  path: '/lift/{entity_type}/{entity}/{view_mode}/{langcode}'
   defaults:
     # Switch to the following after https://www.drupal.org/node/2495947.
     # _entity_view: entity
     _controller: '\Drupal\lift\Controller\LiftController::view'
+    view_mode: full
+    langcode: null
   options:
     parameters:
       entity:
