--- a/config/optional/views.view.lift_blocks.yml
+++ b/config/optional/views.view.lift_blocks.yml
@@ -3,6 +3,7 @@ status: true
 dependencies:
   module:
     - lift
+    - user
 id: lift_blocks
 label: 'Lift blocks'
 module: views
@@ -19,8 +20,9 @@ display:
     position: 0
     display_options:
       access:
-        type: none
-        options: {  }
+        type: perm
+        options:
+          perm: 'administer lift'
       cache:
         type: none
         options: {  }
@@ -409,7 +411,20 @@ display:
       sorts: {  }
       header: {  }
       footer: {  }
-      empty: {  }
+      empty:
+        area:
+          id: area
+          table: views
+          field: area
+          relationship: none
+          group_type: group
+          admin_label: ''
+          empty: true
+          tokenize: false
+          content:
+            value: 'No Lift blocks available.'
+            format: basic_html
+          plugin_id: text
       relationships: {  }
       arguments: {  }
       display_extenders: {  }
