--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ php:
 before_install:
 - wget https://raw.githubusercontent.com/jonkemp/qunit-phantomjs-runner/master/runner.js
 install:
+# Create a database for our Drupal site.
+- "mysql -e 'create database lift;'"
 # Install the latest Drush 6.
 - export PATH="$HOME/.composer/vendor/bin:$PATH"
 - composer global require --no-interaction --prefer-source drush/drush:6.*@dev
@@ -25,7 +27,7 @@ install:
 - echo sendmail_path=`which true` >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
 before_script:
 # Do the site install
-- drush si lift --account-name=admin --account-pass=admin --account-mail=admin@test.com --site-mail=noreply@test.com --site-name="lift" --yes
+- drush si lift --db-url=mysql://root:@127.0.0.1/lift --account-name=admin --account-pass=admin --account-mail=admin@test.com --site-mail=noreply@test.com --site-name="lift" --yes
 # Enable the required modules
 - drush en acquia_lift -y
 - drush dis overlay -y
