--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ install:
 - echo sendmail_path=`which true` >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
 before_script:
 # Do the site install
-- drush si lift --db-url=mysql://root:@127.0.0.1/lift --account-name=admin --account-pass=admin --account-mail=admin@test.com --site-mail=noreply@test.com --site-name="lift" --yes
+- drush si --db-url=mysql://root:@127.0.0.1/lift --account-name=admin --account-pass=admin --account-mail=admin@test.com --site-mail=noreply@test.com --site-name="lift" --yes
 # Enable the required modules
 - drush en acquia_lift -y
 - drush dis overlay -y
