--- a/.travis.yml
+++ b/.travis.yml
@@ -43,7 +43,7 @@ before_script:
 - sed -i -- 's#localurl#localhost:8080/lift#g' behat.yml
 # Make the Travis tests repos agnostic by injecting drupal_root with BEHAT_PARAMS
 - BUILD_OWNER=`dirname $TRAVIS_BUILD_DIR`
-- export BEHAT_PARAMS='{"extensions" : {"Drupal\\DrupalExtension" : {"drupal_root" : "$BUILD_OWNER/drupal"}}}'
+- export BEHAT_PARAMS='{\"extensions\" : {\"Drupal\\DrupalExtension\" : {\"drupal_root\" : \"$BUILD_OWNER/drupal\"}}}'
 script:
 - phantomjs runner.js qunit/core_personalization.html
 - phantomjs runner.js acquia_lift_profiles/qunit/test.html
