--- a/.travis.yml
+++ b/.travis.yml
@@ -44,7 +44,8 @@ before_script:
 - cd ..
 # Make the Travis tests repos agnostic by injecting drupal_root with BEHAT_PARAMS
 - BUILD_OWNER=`dirname $TRAVIS_BUILD_DIR`
-- export BEHAT_PARAMS='{"extensions" : {"Drupal\\DrupalExtension" : {"drupal_root" : "$BUILD_OWNER/drupal"}}}'
+- echo BUILD_OWNER
+#- export BEHAT_PARAMS="{\"extensions\" : {\"Drupal\\DrupalExtension\" : {\"drupal_root\" : \"$BUILD_OWNER/drupal\"}}}"
 script:
 - phantomjs runner.js qunit/core_personalization.html
 - phantomjs runner.js acquia_lift_profiles/qunit/test.html
