--- a/.travis.yml
+++ b/.travis.yml
@@ -44,7 +44,7 @@ before_script:
 - cd ..
 # Make the Travis tests repos agnostic by injecting drupal_root with BEHAT_PARAMS
 - BUILD_OWNER=`dirname $TRAVIS_BUILD_DIR`
-- echo BUILD_OWNER
+- echo $BUILD_OWNER
 #- export BEHAT_PARAMS="{\"extensions\" : {\"Drupal\\DrupalExtension\" : {\"drupal_root\" : \"$BUILD_OWNER/drupal\"}}}"
 script:
 - phantomjs runner.js qunit/core_personalization.html
