--- a/.travis.yml
+++ b/.travis.yml
@@ -45,7 +45,7 @@ before_script:
 # Make the Travis tests repos agnostic by injecting drupal_root with BEHAT_PARAMS
 - BUILD_OWNER=`dirname $TRAVIS_BUILD_DIR`
 - echo $BUILD_OWNER
-#- export BEHAT_PARAMS="{\"extensions\" : {\"Drupal\\DrupalExtension\" : {\"drupal_root\" : \"$BUILD_OWNER/drupal\"}}}"
+- export BEHAT_PARAMS="{\"extensions\" : {\"Drupal\\DrupalExtension\" : {\"drupal_root\" : \"/home/travis/build/acquia/drupal\"}}}"
 script:
 - phantomjs runner.js qunit/core_personalization.html
 - phantomjs runner.js acquia_lift_profiles/qunit/test.html
