Further updates to the .travis.yml file

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ install:
 # Get Selenium
 - cd ..
 - wget --no-verbose http://selenium-release.storage.googleapis.com/2.45/selenium-server-standalone-2.45.0.jar
-- java -jar selenium-server-standalone-2.45.0.jar -Dwebdriver.firefox.bin="/opt/selenium/Firefox.app/Contents/MacOS/firefox-bin" &
+- java -jar selenium-server-standalone-2.45.0.jar&
 # Disable sendmail
 - echo sendmail_path=`which true` >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
 before_script:
