--- a/.travis.yml
+++ b/.travis.yml
@@ -49,7 +49,8 @@ script:
 - phantomjs runner.js qunit/administration.html
 - cd behat-tests
 - "./bin/behat"
-- ls /tmp
+- cd ..
+- cp -r /tmp tmp
 notifications:
   slack:
     secure: mpS7oDoOBsl7KlQUY9loYd1gUiozp4D8kc3vl0nVkm8N8SpAR0RYplPHY/5Jtesbl73kWG4vV7UURNct0cc+szm0eLVbCFcS6vq6evzPKdHzl0U2YiFCLsJItDXBYhDDb5bY4yZgCY8zUBmnOM/S3NysxMMcNmU/DaqUvhZWnGU=
