Add Behat tests to travis job

--- a/.travis.yml
+++ b/.travis.yml
@@ -53,7 +53,7 @@ notifications:
   slack:
     secure: mpS7oDoOBsl7KlQUY9loYd1gUiozp4D8kc3vl0nVkm8N8SpAR0RYplPHY/5Jtesbl73kWG4vV7UURNct0cc+szm0eLVbCFcS6vq6evzPKdHzl0U2YiFCLsJItDXBYhDDb5bY4yZgCY8zUBmnOM/S3NysxMMcNmU/DaqUvhZWnGU=
 env:
-- ARTIFACTS_PATHS=/tmp
+- ARTIFACTS_PATHS='/tmp'
   global:
   - secure: Y+NsZl3WrFAMWQXa3/6h1idEzbSEnfie/2j0oH94nUm+egui3MJJcTuHNv8LbIdBqOPiZFqIgQLgSkE0SSgsjEd4TJVak3LqRgsk8TpjzDwg1UkDPVfSZxrMLxBo53PCg/hBnhOc79/MOATQrHjSFOn3uT4cpD9xcg2jYXaNgic=
   - secure: DxpYLDyaPcmri/xhdo8y4UEh8W6zce3kghSXqGCSatbo8PWmleDztOe/oSwVkzp15Kh+Js7i0OkZAUx+EfMjbz4A3ftI3zryffk+P0uqrR4qZ4BJEN9hpNdX3Ts5lzisY+TiGNPaG2daokUlIqSNUIzOK+t6Hr7bkXEG1Zb92nI=
