--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,9 @@ mysql:
   username: root
   encoding: utf8
 addons:
-  artifacts:
+  artifacts: true
   # ...
-    paths:
+  #  paths:
     #- $(ls /tmp | tr "\n" ":")
 before_install:
 - wget https://raw.githubusercontent.com/jonkemp/qunit-phantomjs-runner/master/runner.js
