Add Behat tests to travis job

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ mysql:
   username: root
   encoding: utf8
 addons:
-  artifacts: true
+  artifacts:
   # ...
     paths:
     - $(ls /home/travis/build/acquia/acquia_lift/behat-tests/tmp | tr "\n" ":")
