--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,10 @@ mysql:
   username: root
   encoding: utf8
 addons:
-  artifacts:
+  artifacts: true
   # ...
-    paths:
-    - $(ls /home/travis/build/acquia/acquia_lift/behat-tests/tmp | tr "\n" ":")
+    #paths:
+    #- $(ls /home/travis/build/acquia/acquia_lift/behat-tests/tmp | tr "\n" ":")
 before_install:
 - wget https://raw.githubusercontent.com/jonkemp/qunit-phantomjs-runner/master/runner.js
 install:
